--- a/ui/timetable.html
+++ b/ui/timetable.html
@@ -44,6 +44,9 @@
             height: calc(100vh - 40px);
         }
 
+               .timetable-container{
+            height: calc(100vh - 55px)!important;
+        }
         .timetable {
             width: 100%;
             border: 1px solid;
